# ROS2

./: Mapa1_prueba  README.md  launch_gazebo.sh  launch_owm_map.sh  map_1743541303.pgm  map_1743541303.yaml
Log/: OrbbecSDK.log.txt
custom_maps/: test1.pgm  test1.yaml  test2.pgm  test2.yaml  test3.pgm  test3.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/a_star_robot/lib/a_star_robot/: a_star_planner  trajectory_controller
install/a_star_robot/share/a_star_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/act1_tf/lib/act1_tf/: act1_tf_node
install/act1_tf/share/act1_tf/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/act2_tf/lib/act2_tf/: joint_pub  puzzlebot
install/act2_tf/share/act2_tf/: package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build
src/hybrid_project/a_star_robot/: setup.cfg  setup.py
src/manchester_activities/act1_tf/: package.xml  setup.cfg  setup.py
src/manchester_activities/act2_tf/: package.xml  setup.cfg  setup.py
src/potMap/: package.xml  setup.cfg  setup.py
src/potMap/launch/: launch.py
src/potMap/potMap/: potMap_node.py
src/puzzlebot_sim/: package.xml  setup.py
src/puzzlebot_sim/launch/: puzzlebot_moving_launch.py
src/ros_move/: setup.cfg  setup.py
src/ros_move/ros_move/: lookup_table.csv  modified_lookup_table.csv
src/signal_generator/: CMakeLists.txt
src/signal_generator/src/: signal_generator.cpp
src/turtle_figure/: package.xml  setup.cfg  setup.py
src/turtle_figure/launch/: launch.py
(+84 files in other folders)
